# DRUID-LEARN

./: Cargo.toml  README.md  build.rs
druid-derive/: Cargo.toml
druid-derive/src/: attr.rs  data.rs  lens.rs  lib.rs
druid-derive/tests/: data.rs  ignore.rs  lens_generic.rs  with_lens.rs  with_same.rs
druid-shell/: Cargo.toml
druid-shell/examples/: edit_text.rs  invalidate.rs  perftest.rs  quit.rs  shello.rs
druid-shell/src/: application.rs  clipboard.rs  common_util.rs  dialog.rs  error.rs  hotkey.rs  keyboard.rs  lib.rs  menu.rs  mouse.rs  region.rs  scale.rs  screen.rs  text.rs  util.rs  window.rs
druid-shell/src/platform/: mod.rs
druid-shell/src/platform/gtk/: application.rs  clipboard.rs  dialog.rs  error.rs  keycodes.rs  menu.rs  mod.rs  screen.rs  util.rs  window.rs
druid-shell/src/platform/mac/: appkit.rs  application.rs  clipboard.rs  dialog.rs  error.rs  keyboard.rs  menu.rs  mod.rs  screen.rs  text_input.rs  util.rs  window.rs
druid-shell/src/platform/shared/: mod.rs  (+1 more)
src/: all_widgets.rs  app.rs  colors.rs  colors_backup.rs  main.rs  multiwin_menu.rs  viewswitcher.rs
src/assets/: mod.rs
src/body/: mod.rs  view1.rs  view2.rs  view3.rs  view4.rs
src/colors/: mod.rs  sidebarbtn.rs
src/controllers/: mod.rs  restore_button.rs  titlebar.rs
src/data/: appdata.rs  family_data.rs  family_details_data.rs  mod.rs  sidebar.rs
src/functions/: family_page.rs  mod.rs
src/widgets/: custom_widget.rs  frame.rs  list_tile.rs  main_view.rs  menu.rs  mod.rs  responsible_tilebutton.rs  sidebar.rs  sidebar_button.rs  split.rs  titlebar.rs  tool_tab.rs
(+32 files in other folders)
