[package]
name = "_1"
version = "0.1.0"
authors = ["Santo Kalayil <santokalayil@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {git = "https://github.com/linebender/druid.git", features = ["im", "svg", "image", "png"]}
# tracing = { version = "0.1.22" }
rust-embed = "5.9.0"
# druid-shell = { version = "0.7.0", default-features = false, path = "druid-shell" }
# druid-derive = { version = "0.4.0", path = "druid-derive" }



[build-dependencies]
winres = "0.1"


[package.metadata.winres]
OriginalFilename = "ECCLESIASTICA.EXE"
LegalCopyright = "Copyright © 2016"